-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
9a5e2a72a (dev), d71804e92 (6.9)
When QQuickTextNodeEngine encounters QChar::ObjectReplacementCharacter for object types that are not images it goes though QTextObjectInterface to draw the object, but does so by painting into an 1x image.
We need to plumb the DPR though somehow, so that the backingstore used by QQuickTextNodeEngine for the object is at the right DPI.
Widgets does not have this issue as it draws directly into the widget backingstore, instead of to an intermediate QImage.
- resulted from
-
QTBUG-126239 Investigate how we can handle NSAdaptiveImageGlyph (Genmojis, stickers)
-
- In Progress
-
| For Gerrit Dashboard: QTBUG-127913 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 582316,1 | WIP: Pass DPR through to QQuickTextNodeEngine | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
| 637874,4 | Respect target DPR when drawing text objects in QQuickTextNodeEngine | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 641741,2 | Respect target DPR when drawing text objects in QQuickTextNodeEngine | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |