tests/auto/quick/qquicktext/data/textObjectDpr.qml
@@ -1,0 +1,7 @@
+import QtQuick
+
+Text {
+    width: 100; height: 100
+    text: "hello"
+    textFormat: Text.RichText
+}
